--- a/package.json
+++ b/package.json
@@ -1,45 +1,47 @@
 {
-  "name": "front-open-fever",
-  "version": "1.0.0",
-  "description": "Basic and anonymous form to upload new temperature entry",
-  "author": "Vincent REHM",
-  "private": true,
-  "scripts": {
-    "dev": "nuxt",
-    "build": "nuxt build",
-    "start": "nuxt start",
-    "generate": "nuxt generate",
-    "lint": "eslint --ext .js,.vue --ignore-path .gitignore ."
-  },
-  "lint-staged": {
-    "*.{js,vue}": "npm run lint",
-    "*.{css,vue}": "stylelint"
-  },
-  "husky": {
-    "hooks": {
-      "pre-commit": "lint-staged"
+    "name": "front-open-fever",
+    "version": "1.0.0",
+    "description": "Basic and anonymous form to upload new temperature entry",
+    "author": "Vincent REHM",
+    "private": true,
+    "scripts": {
+        "dev": "nuxt",
+        "build": "nuxt build",
+        "start": "nuxt start",
+        "generate": "nuxt generate",
+        "lint": "eslint --ext .js,.vue --ignore-path .gitignore ."
+    },
+    "lint-staged": {
+        "*.{js,vue}": "npm run lint",
+        "*.{css,vue}": "stylelint"
+    },
+    "husky": {
+        "hooks": {
+            "pre-commit": "lint-staged"
+        }
+    },
+    "dependencies": {
+        "@nuxtjs/axios": "^5.3.6",
+        "@nuxtjs/pwa": "^3.0.0-0",
+        "@tailwindcss/ui": "^0.1.3",
+        "date-fns": "^2.11.0",
+        "nuxt": "^2.0.0"
+    },
+    "devDependencies": {
+        "@nuxtjs/date-fns": "^1.2.0",
+        "@nuxtjs/dotenv": "^1.4.1",
+        "@nuxtjs/eslint-config": "^2.0.0",
+        "@nuxtjs/eslint-module": "^1.0.0",
+        "@nuxtjs/stylelint-module": "^3.1.0",
+        "@nuxtjs/tailwindcss": "^1.0.0",
+        "babel-eslint": "^10.0.1",
+        "eslint": "^6.1.0",
+        "eslint-config-prettier": "^6.10.0",
+        "eslint-plugin-nuxt": ">=0.4.2",
+        "eslint-plugin-prettier": "^3.1.2",
+        "husky": "^4.0.0",
+        "lint-staged": "^10.0.0",
+        "prettier": "^1.19.1",
+        "stylelint": "^10.1.0"
     }
-  },
-  "dependencies": {
-    "@nuxtjs/axios": "^5.3.6",
-    "@nuxtjs/pwa": "^3.0.0-0",
-    "@tailwindcss/ui": "^0.1.3",
-    "nuxt": "^2.0.0"
-  },
-  "devDependencies": {
-    "@nuxtjs/dotenv": "^1.4.1",
-    "@nuxtjs/eslint-config": "^2.0.0",
-    "@nuxtjs/eslint-module": "^1.0.0",
-    "@nuxtjs/stylelint-module": "^3.1.0",
-    "@nuxtjs/tailwindcss": "^1.0.0",
-    "babel-eslint": "^10.0.1",
-    "eslint": "^6.1.0",
-    "eslint-config-prettier": "^6.10.0",
-    "eslint-plugin-nuxt": ">=0.4.2",
-    "eslint-plugin-prettier": "^3.1.2",
-    "husky": "^4.0.0",
-    "lint-staged": "^10.0.0",
-    "prettier": "^1.19.1",
-    "stylelint": "^10.1.0"
-  }
 }
